ui/web_modules/sourcegraph/blob/styles/Monaco.css
/* ... */
/* SCM Viewlet */
:global .scm-editor {
	display: none;
}

:global .scm-status .monaco-list-row {
	line-height: 30px;
	font-size: 1rem;
}

:global .vs-dark .monaco-workbench > .part.titlebar {
	width: 100%;
	padding: 0px !important;
	height: 45px !important;
	z-index: 2000;
	top: 0px;
	display: flex;
	background-color: white !important;
	position: relative;
	overflow: visible !important;
}

:global .vs-dark .monaco-workbench {
	color: black !important;
}

/* Shadow Overrides */
:global .vs-dark .monaco-workbench .monaco-scrollable-element .shadow.top,
:global .monaco-scrollable-element > .shadow.top,
:global .monaco-editor.vs-dark .scroll-decoration {
	box-shadow:none !important;
}

